# local_task_planner

./: CMakeLists.txt  package.xml
include/Rangefinder/: Rangefinder.h
include/local_task_planner/: LTP.h
include/manipulation_control_node/: ManipulationControlNode.h
launch/: ltp.launch
src/: LTP.cpp  LTP_prototype.cpp  LocalTaskPlanner.cpp  ManipulationControlNode.cpp  Rangefinder.cpp  main.cpp
tests/: RangefinderTest.cpp
utils/: CalculationCameraOffsets.cpp
