<?xml version="1.0"?>
<package>
  <name>local_task_planner</name>
  <version>0.0.0</version>
  <description>Package realize communication between CV sensor, Manipulator and global task planner </description>
  <maintainer email="senserlex@gmail.com">senserlex</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arm_kinematics</build_depend>
  <run_depend>arm_kinematics</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>std_srvs</build_depend>
  <run_depend>std_srvs</run_depend>

  <build_depend>red_msgs</build_depend>
  <run_depend>red_msgs</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
</package>